feat: add api for get Test by id
